force-app/main/default/objects/Implementation_Details_c__x/Implementation_Details_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>Implementation_Details__c</externalName>
    <label>TC Implementations</label>
    <pluralLabel>TC Implementations</pluralLabel>
</CustomObject>