force-app/main/default/objects/Implementation_Details_c__x/fields/Account_Freeze_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Freeze_Date_c__c</fullName>
    <externalDeveloperName>Account_Freeze_Date__c</externalDeveloperName>
    <label>Account Freeze Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>