force-app/main/default/objects/Implementation_Details_c__x/fields/Ad_Copy_with_best_practices_c__c.field-meta.xml
<CustomField>
    <fullName>Ad_Copy_with_best_practices_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Ad_Copy_with_best_practices__c</externalDeveloperName>
    <label>Ad Copy with best practices</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>