force-app/main/default/objects/Implementation_Details_c__x/fields/Addendum_Received_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Received_Date_c__c</fullName>
    <externalDeveloperName>Addendum_Received_Date__c</externalDeveloperName>
    <label>Addendum Received Date</label>
    <type>Date</type>
</CustomField>