force-app/main/default/objects/Implementation_Details_c__x/fields/Admin_Mapping_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Admin_Mapping_Date_c__c</fullName>
    <externalDeveloperName>Admin_Mapping_Date__c</externalDeveloperName>
    <label>Admin Mapping Date</label>
    <type>Date</type>
</CustomField>