force-app/main/default/objects/Implementation_Details_c__x/fields/Agency_360_c__c.field-meta.xml
<CustomField>
    <fullName>Agency_360_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Agency_360__c</externalDeveloperName>
    <label>Agency 360</label>
    <type>Checkbox</type>
</CustomField>