force-app/main/default/objects/Implementation_Details_c__x/fields/Agreed_upon_activation_c__c.field-meta.xml
<CustomField>
    <fullName>Agreed_upon_activation_c__c</fullName>
    <externalDeveloperName>Agreed_upon_activation__c</externalDeveloperName>
    <inlineHelpText>Date of agreed upon activation</inlineHelpText>
    <label>Agreed Upon Activation</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>