force-app/main/default/objects/Implementation_Details_c__x/fields/Air_Hotel_BE_c__c.field-meta.xml
<CustomField>
    <fullName>Air_Hotel_BE_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Air_Hotel_BE__c</externalDeveloperName>
    <label>Air+Hotel BE</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>