force-app/main/default/objects/Implementation_Details_c__x/fields/Back_on_Web_3_c__c.field-meta.xml
<CustomField>
    <fullName>Back_on_Web_3_c__c</fullName>
    <externalDeveloperName>Back_on_Web_3__c</externalDeveloperName>
    <inlineHelpText>Date when the property reverted back to Web</inlineHelpText>
    <label>Back on Web 3</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>