force-app/main/default/objects/Implementation_Details_c__x/fields/BCD_Great_Rates_c__c.field-meta.xml
<CustomField>
    <fullName>BCD_Great_Rates_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>BCD_Great_Rates__c</externalDeveloperName>
    <label>BCD Great Rates</label>
    <type>Checkbox</type>
</CustomField>