force-app/main/default/objects/Implementation_Details_c__x/fields/BE_4_0_set_up_completed_c__c.field-meta.xml
<CustomField>
    <fullName>BE_4_0_set_up_completed_c__c</fullName>
    <externalDeveloperName>BE_4_0_set_up_completed__c</externalDeveloperName>
    <inlineHelpText>Date when BE 4.0 set-up was completed</inlineHelpText>
    <label>BE 4.0 Set-Up Completed</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>