force-app/main/default/objects/Implementation_Details_c__x/fields/Beta_Hotels_c__c.field-meta.xml
<CustomField>
    <fullName>Beta_Hotels_c__c</fullName>
    <externalDeveloperName>Beta_Hotels__c</externalDeveloperName>
    <label>Beta Hotels</label>
    <length>100</length>
    <type>Text</type>
</CustomField>