force-app/main/default/objects/Implementation_Details_c__x/fields/Beta_Launch_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Beta_Launch_Date_c__c</fullName>
    <externalDeveloperName>Beta_Launch_Date__c</externalDeveloperName>
    <inlineHelpText>Hand-off from Imp to CC</inlineHelpText>
    <label>Beta Launch Date</label>
    <type>Date</type>
</CustomField>