force-app/main/default/objects/Implementation_Details_c__x/fields/BI_Support_Manager_lookup_c__c.field-meta.xml
<CustomField>
    <fullName>BI_Support_Manager_lookup_c__c</fullName>
    <externalDeveloperName>BI_Support_Manager_lookup__c</externalDeveloperName>
    <label>BI Support Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>