force-app/main/default/objects/Implementation_Details_c__x/fields/BR_update_info_c__c.field-meta.xml
<CustomField>
    <fullName>BR_update_info_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>BR_update_info__c</externalDeveloperName>
    <label>BR- update account info</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>