force-app/main/default/objects/Implementation_Details_c__x/fields/Brand_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_c__c</fullName>
    <externalDeveloperName>Brand_Name__c</externalDeveloperName>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>