force-app/main/default/objects/Implementation_Details_c__x/fields/Build_Complete_ASM_c__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_ASM_c__c</fullName>
    <externalDeveloperName>Build_Complete_ASM__c</externalDeveloperName>
    <inlineHelpText>Date when the IM finalises the set up in Enterprise Chain + settings and L&amp;F in Console</inlineHelpText>
    <label>Build Complete Date- ASM</label>
    <type>Date</type>
</CustomField>