force-app/main/default/objects/Implementation_Details_c__x/fields/Build_Complete_CC_3rd_party_c__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_CC_3rd_party_c__c</fullName>
    <externalDeveloperName>Build_Complete_CC_3rd_party__c</externalDeveloperName>
    <inlineHelpText>date when the IM finalises the set up in iManager and Enterprise Chain + settings</inlineHelpText>
    <label>Build Complete Date- CC 3rd party</label>
    <type>Date</type>
</CustomField>