force-app/main/default/objects/Implementation_Details_c__x/fields/Build_Complete_CCP_c__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_CCP_c__c</fullName>
    <externalDeveloperName>Build_Complete_CCP__c</externalDeveloperName>
    <inlineHelpText>date when all set up is done and it is ready for test</inlineHelpText>
    <label>Build Complete Date- CCP</label>
    <type>Date</type>
</CustomField>