force-app/main/default/objects/Implementation_Details_c__x/fields/Build_Complete_GDS_c__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_GDS_c__c</fullName>
    <externalDeveloperName>Build_Complete_GDS__c</externalDeveloperName>
    <inlineHelpText>date when QC is completed and iH set up is done</inlineHelpText>
    <label>Build Complete Date- GDS</label>
    <type>Date</type>
</CustomField>