force-app/main/default/objects/Implementation_Details_c__x/fields/Build_Complete_PMS_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete_PMS_Channel_c__c</fullName>
    <externalDeveloperName>Build_Complete_PMS_Channel__c</externalDeveloperName>
    <label>Build Complete Date- PMS Channel</label>
    <type>Date</type>
</CustomField>