force-app/main/default/objects/Implementation_Details_c__x/fields/Bundle_Coordinator_c__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Coordinator_c__c</fullName>
    <externalDeveloperName>Bundle_Coordinator__c</externalDeveloperName>
    <label>Bundle Coordinator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>