force-app/main/default/objects/Implementation_Details_c__x/fields/Bundle_Implementation_c__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Implementation_c__c</fullName>
    <externalDeveloperName>Bundle_Implementation__c</externalDeveloperName>
    <label>Bundle Implementation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>