force-app/main/default/objects/Implementation_Details_c__x/fields/Bundle_Live_Activation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Live_Activation_Date_c__c</fullName>
    <externalDeveloperName>Bundle_Live_Activation_Date__c</externalDeveloperName>
    <inlineHelpText>When has been set to Active the first product from Bundle Implementation?</inlineHelpText>
    <label>Bundle RES Live Activation Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>