force-app/main/default/objects/Implementation_Details_c__x/fields/Call_Center_c__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Call_Center__c</externalDeveloperName>
    <label>Call Center W</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>