force-app/main/default/objects/Implementation_Details_c__x/fields/Cancel_Date_Demand_c__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_Demand_c__c</fullName>
    <externalDeveloperName>Cancel_Date_Demand__c</externalDeveloperName>
    <inlineHelpText>To be updated by Service Termination when termination is processed</inlineHelpText>
    <label>Cancel Date- Demand</label>
    <type>Date</type>
</CustomField>