force-app/main/default/objects/Implementation_Details_c__x/fields/Cancel_Date_Web_BE_c__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_Web_BE_c__c</fullName>
    <externalDeveloperName>Cancel_Date_Web_BE__c</externalDeveloperName>
    <label>Cancel Date- Web BE</label>
    <type>Date</type>
</CustomField>