force-app/main/default/objects/Implementation_Details_c__x/fields/Cancellation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_c__c</fullName>
    <externalDeveloperName>Cancellation_Date__c</externalDeveloperName>
    <inlineHelpText>What is the date this product should be cancelled?</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>