force-app/main/default/objects/Implementation_Details_c__x/fields/Cancellation_Notification_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notification_Date_c__c</fullName>
    <externalDeveloperName>Cancellation_Notification_Date__c</externalDeveloperName>
    <inlineHelpText>What date was the client notified of the pending cancellation?</inlineHelpText>
    <label>Cancellation Notification Date</label>
    <type>Date</type>
</CustomField>