force-app/main/default/objects/Implementation_Details_c__x/fields/Cancellation_Processing_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Processing_Date_c__c</fullName>
    <externalDeveloperName>Cancellation_Processing_Date__c</externalDeveloperName>
    <inlineHelpText>What is the date this cancellation get processed?</inlineHelpText>
    <label>Cancellation Processing Date</label>
    <type>Date</type>
</CustomField>