force-app/main/default/objects/Implementation_Details_c__x/fields/Cancellation_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_c__c</fullName>
    <externalDeveloperName>Cancellation_Reason__c</externalDeveloperName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cannot afford service</fullName>
            </value>
            <value>
                <fullName>Does not wish to renew due to minimal usage</fullName>
            </value>
            <value>
                <fullName>Not satisfied with functionality</fullName>
            </value>
            <value>
                <fullName>Not satisfied with service</fullName>
            </value>
            <value>
                <fullName>Reason Unknown</fullName>
            </value>
            <value>
                <fullName>Switching to competitor</fullName>
            </value>
            <value>
                <fullName>Under new Management/Ownership</fullName>
            </value>
            <value>
                <fullName>Canceled out of Join</fullName>
            </value>
            <value>
                <fullName>Canceled Trial</fullName>
            </value>
            <value>
                <fullName>TC Decline Renewal</fullName>
            </value>
            <value>
                <fullName>TC Termination</fullName>
            </value>
            <value>
                <fullName>Suspend to Cancel</fullName>
            </value>
            <value>
                <fullName>Non Auto Renewal Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>