force-app/main/default/objects/Implementation_Details_c__x/fields/CC_3rd_party_c__c.field-meta.xml
<CustomField>
    <fullName>CC_3rd_party_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CC_3rd_party__c</externalDeveloperName>
    <label>CC 3rd party</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>