force-app/main/default/objects/Implementation_Details_c__x/fields/Chain_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Chain_Name_c__c</fullName>
    <externalDeveloperName>Chain_Name__c</externalDeveloperName>
    <inlineHelpText>What is the Chain Name in iHotelier?</inlineHelpText>
    <label>Chain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>