force-app/main/default/objects/Implementation_Details_c__x/fields/Client_Contact_Email_Air_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Email_Air_c__c</fullName>
    <externalDeveloperName>Client_Contact_Email_Air__c</externalDeveloperName>
    <inlineHelpText>To be completed with the email address of the specific hotel contact person for this product  implementation</inlineHelpText>
    <label>Client Contact Email- Air</label>
    <length>250</length>
    <type>Text</type>
</CustomField>