force-app/main/default/objects/Implementation_Details_c__x/fields/Client_Training_CCP_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Training_CCP_c__c</fullName>
    <externalDeveloperName>Client_Training_CCP__c</externalDeveloperName>
    <inlineHelpText>date when the WalkThrough call takes place</inlineHelpText>
    <label>Client Training - CCP</label>
    <type>Date</type>
</CustomField>