force-app/main/default/objects/Implementation_Details_c__x/fields/Close_to_Account_Management_c__c.field-meta.xml
<CustomField>
    <fullName>Close_to_Account_Management_c__c</fullName>
    <externalDeveloperName>Close_to_Account_Management__c</externalDeveloperName>
    <inlineHelpText>Actual date of implementation complete and hand off to Account Management/Strategy or Customer Care – only fill in once completed</inlineHelpText>
    <label>Close to Account Management</label>
    <type>Date</type>
</CustomField>