force-app/main/default/objects/Implementation_Details_c__x/fields/Close_to_Customer_Care_ASM_c__c.field-meta.xml
<CustomField>
    <fullName>Close_to_Customer_Care_ASM_c__c</fullName>
    <externalDeveloperName>Close_to_Customer_Care_ASM__c</externalDeveloperName>
    <inlineHelpText>Date when the IM hands over the implementation to the CC team</inlineHelpText>
    <label>Close to Customer Care- ASM</label>
    <type>Date</type>
</CustomField>