force-app/main/default/objects/Implementation_Details_c__x/fields/Close_to_Customer_Care_RMS_c__c.field-meta.xml
<CustomField>
    <fullName>Close_to_Customer_Care_RMS_c__c</fullName>
    <externalDeveloperName>Close_to_Customer_Care_RMS__c</externalDeveloperName>
    <inlineHelpText>date when the IM hands over the implementation to the CC team</inlineHelpText>
    <label>Close to Customer Care- RMS</label>
    <type>Date</type>
</CustomField>