force-app/main/default/objects/Implementation_Details_c__x/fields/CM_Implementation_Stage_c__c.field-meta.xml
<CustomField>
    <fullName>CM_Implementation_Stage_c__c</fullName>
    <externalDeveloperName>CM_Implementation_Stage__c</externalDeveloperName>
    <label>CM Implementation Stage</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>