force-app/main/default/objects/Implementation_Details_c__x/fields/Completed_Workbook_Received_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Completed_Workbook_Received_Date_c__c</fullName>
    <externalDeveloperName>Completed_Workbook_Received_Date__c</externalDeveloperName>
    <label>Completed Workbook Received Date</label>
    <type>Date</type>
</CustomField>