force-app/main/default/objects/Implementation_Details_c__x/fields/Consortia_Switch_c__c.field-meta.xml
<CustomField>
    <fullName>Consortia_Switch_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Consortia_Switch__c</externalDeveloperName>
    <label>Consortia Switch</label>
    <type>Checkbox</type>
</CustomField>