force-app/main/default/objects/Implementation_Details_c__x/fields/Contact_Email_GDS_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_GDS_c__c</fullName>
    <externalDeveloperName>Contact_Email_GDS__c</externalDeveloperName>
    <inlineHelpText>to be completed with the email address of the specific hotel contact person for this product  implementation</inlineHelpText>
    <label>Client Contact Email- GDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>