force-app/main/default/objects/Implementation_Details_c__x/fields/Contact_Email_Web_BE_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Web_BE_c__c</fullName>
    <externalDeveloperName>Contact_Email_Web_BE__c</externalDeveloperName>
    <label>Client Contact Email- Web BE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>