force-app/main/default/objects/Implementation_Details_c__x/fields/Contact_Name_EQC_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_EQC_c__c</fullName>
    <externalDeveloperName>Contact_Name_EQC__c</externalDeveloperName>
    <inlineHelpText>to be completed with the contact details of the specific hotel contact person for this product implementation</inlineHelpText>
    <label>Client Contact Name- EQC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>