force-app/main/default/objects/Implementation_Details_c__x/fields/Contact_Name_PMS_Channel_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_PMS_Channel_c__c</fullName>
    <externalDeveloperName>Contact_Name_PMS_Channel__c</externalDeveloperName>
    <inlineHelpText>to be completed with the contact details of the specific hotel contact person for this product implementation</inlineHelpText>
    <label>Client Contact Name- PMS Channel</label>
    <type>Date</type>
</CustomField>