force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Activation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Activation_Date_c__c</fullName>
    <externalDeveloperName>Contract_Activation_Date__c</externalDeveloperName>
    <label>Contract Activation Date</label>
    <type>Date</type>
</CustomField>