force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link_c__c</fullName>
    <externalDeveloperName>Contract_Link__c</externalDeveloperName>
    <inlineHelpText>Paste contract link from the opty</inlineHelpText>
    <label>Contract Link</label>
    <type>Url</type>
</CustomField>