force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Received_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Date_c__c</fullName>
    <externalDeveloperName>Contract_Received_Date__c</externalDeveloperName>
    <label>Contract Received Date</label>
    <type>Date</type>
</CustomField>