force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Received_to_Forms_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_to_Forms_Received_Date__c</fullName>
    <externalDeveloperName>Contract_Received_to_Forms_Received_Date__c</externalDeveloperName>
    <label>Contract Received to Forms Received Date</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>