force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Start_date_to_Live_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_date_to_Live_Date_c__c</fullName>
    <externalDeveloperName>Contract_Start_date_to_Live_Date__c</externalDeveloperName>
    <label>Contract Start date to Live Date</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>