force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_type_Update_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_type_Update_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contract_type_Update__c</externalDeveloperName>
    <label>Contract type Update</label>
    <type>Checkbox</type>
</CustomField>