force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_uploaded_to_SF_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_uploaded_to_SF_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contract_uploaded_to_SF__c</externalDeveloperName>
    <label>Contract uploaded to SF</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>