force-app/main/default/objects/Implementation_Details_c__x/fields/Contract_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year_c__c</fullName>
    <externalDeveloperName>Contract_Year__c</externalDeveloperName>
    <label>Contract Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>