force-app/main/default/objects/Implementation_Details_c__x/fields/Contracted_Products_c__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Products_c__c</fullName>
    <externalDeveloperName>Contracted_Products__c</externalDeveloperName>
    <inlineHelpText>What Products have been contracted?</inlineHelpText>
    <label>Contracted Products</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BI - Agency 360</fullName>
            </value>
            <value>
                <fullName>BI - Demand 360</fullName>
            </value>
            <value>
                <fullName>BI - Price Position</fullName>
            </value>
            <value>
                <fullName>BI - Rate 360</fullName>
            </value>
            <value>
                <fullName>CM- Link</fullName>
            </value>
            <value>
                <fullName>CM-Sync</fullName>
            </value>
            <value>
                <fullName>CM-RDP</fullName>
            </value>
            <value>
                <fullName>iHotelier - iHOS</fullName>
            </value>
            <value>
                <fullName>iHotelier - Area Search</fullName>
            </value>
            <value>
                <fullName>iHotelier - Call Center</fullName>
            </value>
            <value>
                <fullName>iHotelier - Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>iHotelier - Demand Services</fullName>
            </value>
            <value>
                <fullName>iHotelier - EQC / ETP</fullName>
            </value>
            <value>
                <fullName>iHotelier - GDS</fullName>
            </value>
            <value>
                <fullName>iHotelier - Mobile</fullName>
            </value>
            <value>
                <fullName>iHotelier - PMS Integration</fullName>
            </value>
            <value>
                <fullName>iHotelier - Web 3.0</fullName>
            </value>
            <value>
                <fullName>iHotelier - WPS</fullName>
            </value>
            <value>
                <fullName>TC WebSite</fullName>
            </value>
            <value>
                <fullName>TVTrip</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>