force-app/main/default/objects/Implementation_Details_c__x/fields/Conversion_to_Bundle_c__c.field-meta.xml
<CustomField>
    <fullName>Conversion_to_Bundle_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Conversion_to_Bundle__c</externalDeveloperName>
    <label>Conversion to Bundle</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>